[tool.poetry]
name = "alpha-forest"
version = "0.0.1"
description = "some alpha ideas based on investment gurus' papers"
authors = ["forrest.li"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yfinance = "^0.2.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
