[tool.poetry]
name = "alpha-forest"
version = "0.0.1"
description = "some alpha ideas based on investment gurus' papers"
authors = ["forrest.li"]
license = "MIT"
readme = "README.md"
email = "forrest.shijili@gmail.com"

[tool.poetry.dependencies]
python = "^3.11"
yfinance = "^0.2.55"
pandas = "^2.2.3"
pandas-ta = "^0.3.14b0"
sqlalchemy = "^2.0.36"
xgboost = "^2.1.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
